# aligner_minhash

./: .gitignore  .gitmodules  CMakeLists.txt  align.cc  align_long.cc  align_paired.cc  align_single.cc  main.cc  minhash_index.cc
dependencies/: edlibcc-config.cmake  sswcc-config.cmake
dependencies/edlib/: edlib.cc
include/: ThreadPool.h  common.cc  common.h  fastaQ.cc  fastaQ.h  fastamm.cc  fastamm.h  fixed_array.h  hashmap.h  indexer_jobparser.cc  indexer_jobparser.h  input_reader.cc  input_reader.h  kmer.cc  kmer.h  logger.h  long_priorityqueue_wrapper.cc  long_priorityqueue_wrapper.h  minhash.cc  minhash.h  murmur3.h  paired_priorityqueue_wrapper.cc  paired_priorityqueue_wrapper.h  priorityqueue_wrapper.cc  priorityqueue_wrapper.h  sam_writer.cc  sam_writer.h  tensorflow_inference.cc  tensorflow_inference.h  tf_metaparser.cc  tf_metaparser.h
tests/: FastaQTest.cc  FixedArrayTest.cc  MinhashTest.cc  PlayGround.cc  TensorflowInferenceTest.cc  TensorflowMinhashAccuracyTest.cc
tests/test-inputs/: out-subset.bwa.read1.fastq
